k8s/auth-service/auth-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: sa-gke
      containers:
        - name: auth-service
          image: auth-service
          # image: southamerica-east1-docker.pkg.dev/ces-igniteprogram/artreg-auth/auth-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 10
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 10
            initialDelaySeconds: 15
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 20m
              memory: 50Mi
            limits:
              cpu: 70m
              memory: 250Mi
