k8s/auth-service/auth-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-ns
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 80
      targetPort: 8001
