k8s/auth-service/auth-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-netpol
  namespace: auth-ns
spec:
  podSelector:
    matchLabels:
      app: auth-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    # 1. Lista de quem pode acessar
    - podSelector:
        matchLabels:
          app: flag-service
    - podSelector:
        matchLabels:
          app: targeting-service
    - podSelector:
        matchLabels:
          app: evaluation-service
    - podSelector:
        matchLabels:
          app: evaluation-job
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring-ns
    ports:
    - protocol: TCP
      port: 8001
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 9090

  egress:
  - {}
